[build-system]
requires = [
    "setuptools_scm==7.0.5",
    "setuptools >=62",
    "numpy ~=1.21",
    "cython ~=0.29",
    "pytest-runner",
]
build-backend = "setuptools.build_meta"

[project]
name = "arcticpy_no_gsl"
version= "2.1"
description = "This is the python module for the arCTIc code (No GSL requirement)"
authors = [
    { name = "Richard Massey", email = "r.j.massey@durham.ac.uk" }
]
dependencies = [
    "autoconf",
    "numpy ~=1.21",
]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["arcticpy"]
zip-safe = false

[project.optional-dependencies]
pytest = [
    "coverage",
    "pytest",
]
