[metadata]
name = arcticpy
version= 7.0.9
description = This is the python module for the arCTIc code
author =
author_email = 

[options]
zip_safe = False
package_dir =
    =python
packages = arcticpy
python_requires = >=3.6
setup_requires =
    setuptools >=38.3.0
    pytest-runner
install_requires =
    numpy>=1.21
    cython>=0.29
tests_require =
    coverage
    pytest

[aliases]
test = pytest
